--- a/helppro-frontend/helppro_app/pubspec.yaml
+++ b/helppro-frontend/helppro_app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.13.5
   flutter_secure_storage: ^8.0.0
   provider: ^6.0.5
+  google_maps_flutter: ^2.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
