--- a/helppro-frontend/helppro_app/pubspec.yaml
+++ b/helppro-frontend/helppro_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   provider: ^6.0.5
   google_maps_flutter: ^2.2.0
+  geocoding: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
