--- a/helppro-frontend/helppro_app/pubspec.yaml
+++ b/helppro-frontend/helppro_app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   provider: ^6.0.5
   geolocator: ^9.0.2
   google_maps_flutter: ^2.2.3
+  shared_preferences: ^2.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
